# nvidia-stock-prediction

./: .gitignore  .replit  NVDA_historical_data.csv  README.md  download_data.py  package-lock.json  package.json  pyproject.toml  scaler.pkl  train_model.py
stock_prediction_api/: requirements.txt
stock_prediction_api/src/: main.py  main_alt.py  stock_prediction_model.pkl
stock_prediction_api/src/routes/: prediction.py
stock_prediction_api/src/static/: index.html
stock_prediction_api/src/static/assets/: index_internal.css  index_internal.js  index_internal1.css  index_internal1.js
stock_prediction_frontend/: index.html  package.json  vercel.json  vite.config.js
stock_prediction_frontend/src/: App.jsx
tmp/cache/vite/: last-build-production.json
