
[tool.poetry]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.12"
joblib = ">=1.5.1"
numpy = ">=2.3.2"
pandas = ">=2.3.1"
scikit-learn = ">=1.7.1"
yfinance = ">=0.2.65"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
