
[tool.poetry]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Stock Prediction Using Machine Learning"
authors = ["Soumen Basak"]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
joblib = ">=1.5.1"
numpy = ">=2.3.2"
pandas = ">=2.3.1"
scikit-learn = ">=1.7.1"
yfinance = ">=0.2.65"
poetry = "^2.1.4"
flask = "^3.1.1"
flask-cors = "^6.0.1"
flask-sqlalchemy = "^3.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
